# silt

./: Cargo.toml  build.rs
assets/shaders/: model_loading.frag  triangle.vert  uniform_buffers.vert
src/: collections.rs  error.rs  lib.rs  loader.rs  macros.rs  main.rs  model.rs  model_loading.rs  pipeline.rs  prelude.rs  storage.rs  swapchain.rs  texture_mapping.rs  triangle.rs  uniform_buffers.rs  vertex_buffers.rs  vk.rs
src/loader/: physical_device_attributes.rs
src/material/: mod.rs
src/pipeline/: mod.rs  pipeline.rs  render_context.rs  render_pass.rs  shader.rs
src/prelude/: identifier.rs  managers.rs  mod.rs  traits.rs  utils.rs
src/properties/: device_features.rs  mod.rs  physical_device_attributes.rs
src/resources/: buffer.rs  descriptions.rs  descriptors.rs  image.rs  mod.rs  redundancy.rs
src/shaders/: model_loading.vert  texture_mapping.vert
src/storage/: buffer.rs  descriptors.rs  image.rs  mod.rs
src/sync/: commands.rs  mod.rs  primitives.rs  queue.rs
