[package]
name = "silt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.2+1.3.238", features = ["linked", "debug"]}
ash-window = "0.12.0"
gpu-allocator = "0.22.0"
itertools = "0.10.5"
memoffset = "0.8.0"
nalgebra-glm = "0.18.0"
raw-window-handle = "0.5.1"
winit = "0.28.2"

[build-dependencies]
shaderc = "0.8.2"
