[package]
name = "silt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.2", features = ["linked", "debug"]}
ash-window = "0.12.0"
derive_more = "0.99.17"
glam = "0.23.0"
gpu-allocator = "0.22.0"
image = "0.24.5"
itertools = "0.10.5"
memoffset = "0.8.0"
nalgebra-glm = "0.18.0"
once_cell = "1.17.1"
raw-window-handle = "0.5.1"
tobj = "3.2.4"
winit = "0.28.2"
shaderc = "0.8.2"

[build-dependencies]
shaderc = "0.8.2"
